--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "zstd-android"]
-	path = zstd-android
-	url = https://github.com/monstertoss/zstd-android
+[submodule "zstd-jni"]
+	path = zstd-jni
+	url = https://github.com/luben/zstd-jni
