--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'org.bouncycastle:bcpkix-jdk15on:1.58'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile project(":zstd-android")
+    compile project(":zstd-jni")
     testCompile 'junit:junit:4.12'
 }
 
